# test_task_trucks

./: .gitignore  README.md  Task.md  pyproject.toml  requirements.txt
apps/trucks/: admin.py  apps.py  models.py  urls.py  views.py
apps/trucks/migrations/: 0001_initial.py  0002_remove_trip_overload.py
apps/trucks/services/: truck.py
core/: urls.py
core/settings/: __init__.py  base.py  storage.py
db/: db.sqlite3
static/css/: trucks.css
static/js/: trucks.js
templates/base/: base.html  homepage.html
templates/trucks/: trucks.html
