[tool.poetry]
name = "test-case-cars"
version = "0.1.0"
description = ""
authors = ["Роман Саркисян <sarkisyan.r.a@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_case_cars"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
gunicorn = "^20.1.0"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
